<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E7305C"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity22_definition_of_hyundai">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:paddingBottom="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/hundai_new"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView65"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:paddingBottom="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/maruti_swift"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView28"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:paddingBottom="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/civic"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView67"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:paddingBottom="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/insight"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView68"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>